apps/misc/stirling-pdf/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stirling-pdf
spec:
  type: ClusterIP
  ports:
    - name: web-ui
      port: 8080
      targetPort: web-ui
